# gnome-randr

./: Cargo.toml
dbus-derive/: Cargo.toml
dbus-derive/src/: derive_args.rs  derive_enum.rs  derive_propmap.rs  derive_struct.rs  lib.rs  util.rs
dbus-derive/tests/: correct-signature.rs  correct-tuple.rs  propmap-rename.rs
dbus-derive/tests/ui/: enum-doesnt-impl-traits.rs  field-not-arg.rs  field-not-arg.stderr  not-a-valid-struct.rs  not-a-valid-struct.stderr  prop-map-not-option.rs
dbus-traits/: Cargo.toml
dbus-traits/src/: arg.rs  dict_key.rs  lib.rs
randr/: Cargo.toml
randr/src/: cli.rs  dbus_api.rs  display_config.rs  lib.rs  main.rs  mode_db.rs  output.rs
