[package]
name = "dbus-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.76"
quote = "1.0.35"
dbus-traits = { path = "../dbus-traits" }
syn = { version = "2.0.48", features = ["full", "parsing"] }
darling = { version = "0.20.3", features = ["diagnostics"] }

[dev-dependencies]
trybuild = { version = "1.0.89", features = ["diff"] }
dbus = "0.9.7"
