[package]
name = "gnome-randr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dbus = "0.9.7"
dbus-derive = { path = "../dbus-derive" }
derive_builder = "0.20.0"
lexopt = "0.3.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
regex = "1.10.3"
